{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 11,
  "lineage": "50373f02-c022-2075-801d-667df6fc3bb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:internet-gateway/igw-0f776b6bd88144065",
            "id": "igw-0f776b6bd88144065",
            "owner_id": "136311010584",
            "tags": {
              "Name": "IGW2"
            },
            "tags_all": {
              "Name": "IGW2"
            },
            "vpc_id": "vpc-046304ad9c3c81532"
          },
          "dependencies": [
            "aws_vpc.public2",
            "aws_vpc.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:security-group/sg-0f27275a24499d2f0",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0f27275a24499d2f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG2",
            "name_prefix": "",
            "owner_id": "136311010584",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3d8f8ef1dd25137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:subnet/subnet-0de49584631f32046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de49584631f32046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136311010584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SB2"
            },
            "tags_all": {
              "Name": "SB2"
            },
            "vpc_id": "vpc-0c3d8f8ef1dd25137"
          },
          "dependencies": [
            "aws_vpc.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SB21",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:subnet/subnet-04cc6593da19497e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc6593da19497e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136311010584",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0c3d8f8ef1dd25137"
          },
          "dependencies": [
            "aws_vpc.public3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:vpc/vpc-046304ad9c3c81532",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06664f494af4bfc65",
            "default_route_table_id": "rtb-08f9a2bc6d2e8f836",
            "default_security_group_id": "sg-081dece36c755c4ab",
            "dhcp_options_id": "dopt-0d0880b9e04512a94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-046304ad9c3c81532",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f9a2bc6d2e8f836",
            "owner_id": "136311010584",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136311010584:vpc/vpc-0c3d8f8ef1dd25137",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0fb440ff50065b8a9",
            "default_route_table_id": "rtb-022eca327aafba50b",
            "default_security_group_id": "sg-0cf4bb674d6c9c68d",
            "dhcp_options_id": "dopt-0d0880b9e04512a94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c3d8f8ef1dd25137",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022eca327aafba50b",
            "owner_id": "136311010584",
            "tags": {
              "Name": "public3"
            },
            "tags_all": {
              "Name": "public3"
            }
          }
        }
      ]
    }
  ]
}